Fix content overflow bug in scooter list header

--- a/frontend/src/app/pages/map/map.component.css
+++ b/frontend/src/app/pages/map/map.component.css
@@ -74,6 +74,12 @@
   padding: 0;
 }
 
+/* app-scooter-list {
+  position: absolute;
+  width: 100%;
+  background-color: red;
+} */
+
 .search-input {
   border-radius: 15px;
   padding: 10px;
